--- a/ActividadesGitHub.html
+++ b/ActividadesGitHub.html
@@ -12,7 +12,7 @@
     <link href="Css/bootstrap.css" rel="stylesheet" type="text/css"></link>
     <link href="Css/bootstrap.min.css" rel="stylesheet" type="text/css"></link>
     <link href="Css/font-awesome.css" rel="stylesheet" type="text/css"></link>
-    <title> Inicio</title>
+    <title> Actividades </title>
     <link href="img/logo.ico" rel="icon"></link>
     </meta>
 </head>
@@ -69,31 +69,9 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="Actividades.html">
                             Actividades
                         </a>
-                        <ul>
-                            <li>
-                                <a href="ActividadesCss3.html">
-                                    Actividad 1
-                                </a>
-                            </li>
-                            <li>
-                                <a href="ActividadesHTML5.html">
-                                    Actividad 2
-                                </a>
-                            </li>
-                            <li>
-                                <a href="ActividadesGit.html">
-                                    Actividad 3
-                                </a>
-                            </li>
-                            <li>
-                                <a href="ActividadesGitHub.html">
-                                    Actividad 4
-                                </a>
-                            </li>
-                        </ul>
                     </li>
                     <li>
                         <a href="Autores.html">
@@ -104,85 +82,65 @@
             </div>
         </div>
     </div>
-    <div class="banner img-1 textbanner">
-    </div>
     <!--Esta es la sección para el Inicio-->
     <div class="container row col-lg-12">
         <div class="col-lg-12 row subcontainer">
             <div class="col-lg-12 row">
-                <div class="col-lg-12">
+                <div class="col-lg-12 row">
                     <div class="Encabezado col-lg-12 ">
                         <h2>
-                            Información General OVI
+                            Sección de preguntas sobre GITHUB
                         </h2>
                     </div>
                     <div class="col-lg-12">
-                        <p>
-                            El OVI trabajado se basa en la utilziación de GIT, GITHUB, HTML 5 y CSS3, en el cual se explica los conceptos sobre estas
-                            herramientas.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="Encabezado col-lg-12 ">
-                        <h2>
-                            Objetivos Ovi
-                        </h2>
-                    </div>
-                    <div class="col-lg-12">
-                        <p>
-                            1. Crear un maquetado inicial, con lo conceptos básicos de HTML 5, CSS 3 y otros conceptos adicionales, que ayudaran en el
-                            desarrollo de la página web.
-                        </p>
-                        <p>
-                            2. Aprender a utilizar y manejar la estructura básica de HTML, para crear un esquema de una página web, también aprender
-                            a utilizar bibliotecas externas como lo es Bootstrap y adaptarlo a nuestro HTML.
-                        </p>
-                        <p>
-                            3. Presentar los conceptos básicos de GIT, GITHUB, HTML 5 y CSS 3.
-                        </p>
-                        <p>
-                            4. Implementar efectos a las páginas web por medio del CSS, utilizado efectos hover, active, before, after, etc.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="Encabezado col-lg-12 ">
-                        <h2>
-                            Objetivos Curso
-                        </h2>
-                    </div>
-                    <div class="col-lg-12">
-                        <p>
-                            5. Introducción, profundización e información complementaria sobre el uso de GIT y GITHUB para gestionar proyectos colaborativos
-                            de diseño web, HTML5 y CSS3 para creación de contenidos en formato web (Paginas y Sitios Web)
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="Encabezado col-lg-12 ">
-                        <h2>
-                            Tematica del Curso
-                        </h2>
-                    </div>
-                    <div class="col-lg-12">
-                        <p>
-                            La tematica que se utilizo para el desarrollo de esta actividad fue Diseños de Sitios Web (301122).
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="Encabezado col-lg-12 ">
-                        <h2>
-                            Información Adicional
-                        </h2>
-                    </div>
-                    <div class="col-lg-12">
-                        <p>
-                            En el desarrollo de esta actividad se conoce mas afondo el funcionamiento de GitHub, GitHubPages, Css, HTML y otras implementaciones
-                            adicionales que se hicieron en esta pagina, esta cuenta con secciones de Slider(Carrucel) para
-                            la visualizzción de los videos.
-                        </p>
+                        <!--Pregunta 1 GITHUB-->
+                        <fieldset>
+                            <legend>Cuales son los tipos para clonar un repositorio</legend>
+                            <div>
+                                <input type="radio" id="Pregunta1" name="Pregunta1" value="Incorrecto">
+                                <label for="Pregunta1">HTTP / HTTPS</label>
+                            </div>
+                            <div>
+                                <input type="radio" id="Pregunta1" name="Pregunta1" value="Incorrecto">
+                                <label for="Pregunta1">HTTP / SSH</label>
+                            </div>
+                            <div>
+                                <input type="radio" id="Pregunta1" name="Pregunta1" value="Correcto">
+                                <label for="Pregunta1">HTTPS / SSH</label>
+                            </div>
+                            <div class="RespuestaPregunta1"></div>
+                        </fieldset>
+
+                        <!--Pregunta 2 GITHUB-->
+                        <fieldset>
+                            <legend>Se puede compartir un repositorio para que otras personas puedan editarlo</legend>
+                            <div>
+                                <input type="radio" id="Pregunta2" name="Pregunta2" value="Correcto">
+                                <label for="Pregunta2">Si</label>
+                            </div>
+                            <div>
+                                <input type="radio" id="Pregunta2" name="Pregunta2" value="Incorrecto">
+                                <label for="Pregunta2">No</label>
+                            </div>
+                            <div class="RespuestaPregunta2"></div>
+                        </fieldset>
+
+                        <!--Pregunta 3 GITHUB-->
+                        <fieldset>
+                            <legend>
+                                   Es un hosting online para nuestros repositorios
+                            </legend>
+                            <div>
+                                <input type="radio" id="Pregunta3" name="Pregunta3" value="Correcto">
+                                <label for="Pregunta3">Si</label>
+                            </div>
+                            <div>
+                                <input type="radio" id="Pregunta3" name="Pregunta3" value="Incorrecto">
+                                <label for="Pregunta3">No</label>
+                            </div>
+                            <div class="RespuestaPregunta3"></div>
+                        </fieldset>
+                        
                     </div>
                 </div>
             </div>
