--- a/ActividadesHTML5.html
+++ b/ActividadesHTML5.html
@@ -89,123 +89,138 @@
                 <div class="col-lg-12 row">
                     <div class="Encabezado col-lg-12 ">
                         <h2>
-                            Actividad 1 CSS 3
+                            Sección de preguntas sobre HTML 5
                         </h2>
                     </div>
                     <div class="col-lg-12">
-                        <!--Pregunta 1 Css-->
+                        <!--Pregunta 1 HTML5-->
                         <fieldset>
-                            <legend>En CSS, ¿cómo se define un borde la siguiente forma?
-                                <ul>
-                                    <li>Borde superior: 10 px</li>
-                                    <li>Borde inferior: 5 px</li>
-                                    <li>Borde izquierdo: 20 px</li>
-                                    <li>Borde derecho: 1 px</li>
-                                </ul>
-                            </legend>
+                            <legend>¿Cuál de los siguientes usos del elemento script te parece el más apropiado?</legend>
                             <div>
                                 <input type="radio" id="Pregunta1" name="Pregunta1" value="Incorrecto">
-                                <label for="Pregunta1">border-width:10px 20px 5px 1px </label>
+                                <label for="Pregunta1">
+                                    <xmp>
+                                        <script src="archivo.js"></script>
+                                    </xmp>
+                                </label>
+                            </div>
+                            <div>
+                                <input type="radio" id="Pregunta1" name="Pregunta1" value="Incorrecto">
+                                <label for="Pregunta1">
+                                    <xmp>
+                                        <script src="archivo.js" />
+                                    </xmp>
+                                </label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta1" name="Pregunta1" value="Correcto">
-                                <label for="Pregunta1">border-width:10px 1px 5px 20px </label>
-                            </div>
-                            <div>
-                                <input type="radio" id="Pregunta1" name="Pregunta1" value="Incorrecto">
-                                <label for="Pregunta1">border-width:5px 20px 10px 1px </label>
-                            </div>
-                            <div>
-                                <input type="radio" id="Pregunta1" name="Pregunta1" value="Incorrecto">
-                                <label for="Pregunta1">border-width:10px 5px 20px 1px </label>
+                                <label for="Pregunta1">
+                                    <xmp>
+                                        <script type="text/javascript" src="archivo.js"></script>
+                                    </xmp>
+                                </label>
                             </div>
                             <div class="RespuestaPregunta1"></div>
                         </fieldset>
 
-                        <!--Pregunta 2 Css-->
+                        <!--Pregunta 2 HTML5-->
                         <fieldset>
-                            <legend>En CSS3, ¿qué elementos selecciona la pseudoclase :empty?</legend>
+                            <legend>Selecciona el elemento inválido:</legend>
                             <div>
                                 <input type="radio" id="Pregunta2" name="Pregunta2" value="Incorrecto">
-                                <label for="Pregunta2">Los elementos que son invisibles </label>
+                                <label for="Pregunta2">
+                                    <xmp>
+                                        <meter></meter>
+                                    </xmp>
+                                </label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta2" name="Pregunta2" value="Incorrecto">
-                                <label for="Pregunta2">Los elementos que no tienen padre </label>
+                                <label for="Pregunta2">
+                                    <xmp>
+                                        <hgroup></hgroup>
+                                    </xmp>
+                                </label>
+                            </div>
+                            <div>
+                                <input type="radio" id="Pregunta2" name="Pregunta2" value="Incorrecto">
+                                <label for="Pregunta2">
+                                    <xmp>
+                                        <progress></progress>
+                                    </xmp>
+                                </label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta2" name="Pregunta2" value="Correcto">
-                                <label for="Pregunta2">Los elementos que no tienen hijos </label>
-                            </div>
-                            <div>
-                                <input type="radio" id="Pregunta2" name="Pregunta2" value="Incorrecto">
-                                <label for="Pregunta2">Los elementos que no tienen asociada una regla CSS </label>
+                                <label for="Pregunta2">
+                                    <xmp>
+                                        <post></post>
+                                    </xmp>
+                                </label>
                             </div>
                             <div class="RespuestaPregunta2"></div>
                         </fieldset>
 
-                        <!--Pregunta 3 Css-->
+                        <!--Pregunta 3 HTML5-->
                         <fieldset>
                             <legend>
-                                Indica cuál es el código CSS que define un texto en rojo, con el tipo de letra Arial y el tamaño 14 pixels
+                                Selecciona el tipo de input válido
                             </legend>
                             <div>
                                 <input type="radio" id="Pregunta3" name="Pregunta3" value="Incorrecto">
-                                <label for="Pregunta3">font-family: Arial; size: 14px; color: #FF0000; </label>
+                                <label for="Pregunta3">type=”boolean”</label>
+                            </div>
+                            <div>
+                                <input type="radio" id="Pregunta3" name="Pregunta3" value="Incorrecto">
+                                <label for="Pregunta3">type=”textarea”</label>
+                            </div>
+                            <div>
+                                <input type="radio" id="Pregunta3" name="Pregunta3" value="Incorrecto">
+                                <label for="Pregunta3">type=”alphanumeric”</label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta3" name="Pregunta3" value="Correcto">
-                                <label for="Pregunta3">font-family: Arial; font-size: 14px; color: #FF0000; </label>
-                            </div>
-                            <div>
-                                <input type="radio" id="Pregunta3" name="Pregunta3" value="Incorrecto">
-                                <label for="Pregunta3">text-family: Arial; font-size: 14px; color: #FF0000; </label>
-                            </div>
-                            <div>
-                                <input type="radio" id="Pregunta3" name="Pregunta3" value="Incorrecto">
-                                <label for="Pregunta3"> font-family: Arial; font-size: 14px; text-color: #00FF00; </label>
+                                <label for="Pregunta3">type=”range”</label>
                             </div>
                             <div class="RespuestaPregunta3"></div>
                         </fieldset>
-                        <!--Pregunta 4 Css-->
+                        <!--Pregunta 4 HTML5-->
                         <fieldset>
-                            <legend>¿Cuál de los siguientes no es un código válido de color en CSS?</legend>
+                            <legend>¿Cuál de los siguientes atributos permite mostrar un valor por defecto en un elemento input,
+                                pero que se borra cuándo hacemos foco en el mismo?</legend>
                             <div>
                                 <input type="radio" id="Pregunta4" name="Pregunta4" value="Incorrecto">
-                                <label for="Pregunta4">#505050 </label>
-                            </div>
-                            <div>
-                                <input type="radio" id="Pregunta4" name="Pregunta4" value="Incorrecto">
-                                <label for="Pregunta4">rgb(355, 0, 0) </label>
+                                <label for="Pregunta4">content</label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta4" name="Pregunta4" value="Correcto">
-                                <label for="Pregunta4">red </label>
+                                <label for="Pregunta4">placeholder</label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta4" name="Pregunta4" value="Incorrecto">
-                                <label for="Pregunta4"> #FFF </label>
+                                <label for="Pregunta4">source</label>
+                            </div>
+                            <div>
+                                <input type="radio" id="Pregunta4" name="Pregunta4" value="Incorrecto">
+                                <label for="Pregunta4">value</label>
                             </div>
                             <div class="RespuestaPregunta4"></div>
                         </fieldset>
-                        <!--Pregunta 5 Css-->
+                        <!--Pregunta 5 HTML5-->
                         <fieldset>
-                            <legend>¿Cómo se cambia el color del texto de un elemento en CSS?</legend>
+                            <legend>¿Para qué se utiliza el contenido dentro de la etiqueta canvas?</legend>
                             <div>
                                 <input type="radio" id="Pregunta5" name="Pregunta5" value="Incorrecto">
-                                <label for="Pregunta5">textcolor </label>
-                            </div>
-                            <div>
-                                <input type="radio" id="Pregunta5" name="Pregunta5" value="Incorrecto">
-                                <label for="Pregunta5">text-color </label>
+                                <label for="Pregunta5">Se muestra como link, que al hacer click en él nos muestra el canvas. </label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta5" name="Pregunta5" value="Correcto">
-                                <label for="Pregunta5">color  </label>
+                                <label for="Pregunta5">Es el contenido alternativo que muestran solo los navegadores que no soportan canvas.</label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta5" name="Pregunta5" value="Incorrecto">
-                                <label for="Pregunta5"> fgcolor  </label>
+                                <label for="Pregunta5">Es el texto que le podemos añadir al canvas a modo de título.
+                                </label>
                             </div>
                             <div class="RespuestaPregunta5"></div>
                         </fieldset>
