--- a/GITPages.html
+++ b/GITPages.html
@@ -93,7 +93,7 @@
                     </div>
                     <div class="col-lg-12 row">
                         <div class="col-lg-3 contenedorIMG">
-                            <img alt="Responsive image" data-target="#ModalGitPages" data-toggle="modal" src="Img/ColorGitHub.png">
+                            <img alt="Responsive image" data-target="#ModalGitPages" data-toggle="modal" src="Img/ColorGitpages.png">
                             </img>
                         </div>
                         <div class="col-lg-9">
