--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
                                     Actividad 4
                                 </a>
                             </li>
+                            <li>
+                                <a href="ActividadesGitHubPages.html">
+                                    Actividad 5
+                                </a>
+                            </li>
                         </ul>
                     </li>
                     <li>
